testing/tests/ui/since_1.58/incorrect_path.stderr
error: template "thisdoesnotexist.html" not found in directories ["$WORKSPACE/target/tests/askama_testing/templates"]
 --> tests/ui/since_1.58/incorrect_path.rs:4:19
  |
4 | #[template(path = "thisdoesnotexist.html")]
  |                   ^^^^^^^^^^^^^^^^^^^^^^^
